==> pelrun/uf2loader/stage3/lib/petit_fatfs/diskio.c <==
#include "diskio.h"
#include <string.h>
#include "pico/time.h"
#include "hardware/gpio.h"
#include "hardware/spi.h"
#define SD_SPICH spi0
#define SD_SPI_MISO 16
#define SD_SPI_CS 17
#define SD_SPI_SCK 18
#define SD_SPI_MOSI 19
#define SD_SPI_BAUDRATE_INIT (300 * 1000)
#define SD_SPI_BAUDRATE (20 * 1000 * 1000)
#define CS_H() gpio_put(SD_SPI_CS, 1) /* Set MMC CS "high" */
#define CS_L() gpio_put(SD_SPI_CS, 0) /* Set MMC CS "low" */
#define CMD0 (0)           /* GO_IDLE_STATE */
#define CMD1 (1)           /* SEND_OP_COND */
#define ACMD41 (0x80 + 41) /* SEND_OP_COND (SDC) */
#define CMD8 (8)           /* SEND_IF_COND */
#define CMD9 (9)           /* SEND_CSD */
#define CMD10 (10)         /* SEND_CID */
#define CMD12 (12)         /* STOP_TRANSMISSION */
#define CMD13 (13)         /* SEND_STATUS */
#define ACMD13 (0x80 + 13) /* SD_STATUS (SDC) */
#define CMD16 (16)         /* SET_BLOCKLEN */
#define CMD17 (17)         /* READ_SINGLE_BLOCK */
#define CMD18 (18)         /* READ_MULTIPLE_BLOCK */
#define CMD23 (23)         /* SET_BLOCK_COUNT */
#define ACMD23 (0x80 + 23) /* SET_WR_BLK_ERASE_COUNT (SDC) */
#define CMD24 (24)         /* WRITE_BLOCK */
#define CMD25 (25)         /* WRITE_MULTIPLE_BLOCK */
#define CMD32 (32)         /* ERASE_ER_BLK_START */
#define CMD33 (33)         /* ERASE_ER_BLK_END */
#define CMD38 (38)         /* ERASE */
#define CMD55 (55)         /* APP_CMD */
#define CMD58 (58)         /* READ_OCR */

static void xmit_mmc(const BYTE *buff, /* Data to be sent */
                     UINT bc           /* Number of bytes to send */
)
{
  spi_write_blocking(SD_SPICH, buff, bc);
}

static void rcvr_mmc(BYTE *buff, /* Pointer to read buffer */
                     UINT bc     /* Number of bytes to receive */
)
{
  spi_read_blocking(SD_SPICH, 0xFF, buff, bc);
}

static int wait_ready(void) /* 1:OK, 0:Timeout */
{
  BYTE d;
  UINT tmr;

  for (tmr = 5000; tmr; tmr--)
  { /* Wait for ready in timeout of 500ms */
    rcvr_mmc(&d, 1);
    if (d == 0xFF) break;
    sleep_us(100);
  }

  return tmr ? 1 : 0;
}

static int rcvr_datablock(            /* 1:OK, 0:Failed */
                          BYTE *buff, /* Data buffer to store received data */
                          UINT btr    /* Byte count */
)
{
  BYTE d[2];
  UINT tmr;

  for (tmr = 1000; tmr; tmr--)
  { /* Wait for data packet in timeout of 100ms */
    rcvr_mmc(d, 1);
    if (d[0] != 0xFF) break;
    sleep_us(100);
  }
  if (d[0] != 0xFE) return 0; /* If not valid data token, return with error */

  rcvr_mmc(buff, btr); /* Receive the data block into buffer */
  rcvr_mmc(d, 2);      /* Discard CRC */

  return 1; /* Return with success */
}

DSTATUS disk_initialize(void)
{
  BYTE n, ty, cmd, buf[4];
  UINT tmr;
  DSTATUS s;

  sleep_us(10000); /* 10ms */

  // Enable SPI at 300khz and connect to GPIOs
  spi_init(SD_SPICH, SD_SPI_BAUDRATE_INIT);
  gpio_set_function(SD_SPI_MISO, GPIO_FUNC_SPI);
  gpio_set_function(SD_SPI_MOSI, GPIO_FUNC_SPI);
  gpio_set_function(SD_SPI_SCK, GPIO_FUNC_SPI);
  gpio_set_pulls(SD_SPI_MISO, true, false);  // pull-up DO
  gpio_init(SD_SPI_CS);
  CS_H();
  gpio_set_dir(SD_SPI_CS, GPIO_OUT);

  for (n = 10; n; n--)
    rcvr_mmc(buf, 1); /* Apply 80 dummy clocks and the card gets ready to receive command */

  ty = 0;
  if (send_cmd(CMD0, 0) == 1)
  { /* Enter Idle state */
    if (send_cmd(CMD8, 0x1AA) == 1)
    {                   /* SDv2? */
      rcvr_mmc(buf, 4); /* Get trailing return value of R7 resp */
      if (buf[2] == 0x01 && buf[3] == 0xAA)
      { /* The card can work at vdd range of 2.7-3.6V */
        for (tmr = 1000; tmr; tmr--)
        { /* Wait for leaving idle state (ACMD41 with HCS bit) */
          if (send_cmd(ACMD41, 1UL << 30) == 0) break;
          sleep_us(1000);
        }
        if (tmr && send_cmd(CMD58, 0) == 0)
        { /* Check CCS bit in the OCR */
          rcvr_mmc(buf, 4);
          ty = (buf[0] & 0x40) ? CT_SDC2 | CT_BLOCK : CT_SDC2; /* SDv2+ */
        }
      }
    }
    else
    { /* SDv1 or MMCv3 */
      if (send_cmd(ACMD41, 0) <= 1)
      {
        ty  = CT_SDC2;
        cmd = ACMD41; /* SDv1 */
      }
      else
      {
        ty  = CT_MMC3;
        cmd = CMD1; /* MMCv3 */
      }
      for (tmr = 1000; tmr; tmr--)
      { /* Wait for leaving idle state */
        if (send_cmd(cmd, 0) == 0) break;
        sleep_us(1000);
      }
      if (!tmr || send_cmd(CMD16, 512) != 0) /* Set R/W block length to 512 */
        ty = 0;
    }
  }
  CardType = ty;
  s        = ty ? 0 : STA_NOINIT;
  Stat     = s;

  deselect();

  if (Stat != STA_NOINIT)
  {
    // switch to fast spi clock
    spi_init(SD_SPICH, SD_SPI_BAUDRATE);
  }

  return s;
}
